# dotfiles

./: .gitignore  .gitmodules  README.md  agnoster-vim.zsh-theme  bashrc  gdbinit  gitconfig  i3blocks.conf  obsidian.vimrc  setup.sh  sshconfig  tmux.conf  vimrc  zshrc
alacritty/: alacritty.toml  alacritty.yml
bat/syntaxes/: mlir.sublime-syntax
cfg/: logid.cfg
dconf/: forge.conf  full.conf  keybindings.conf  media-keys.conf  setup.sh
doc/: gnome.md  links.md  plugins.md
drawio/: configuration.json
gdb/: gdbinit
git/: config
hypr/: hyprland.conf
kitty/: kitty.conf
nvim/: init.lua  lazy-lock.json  minimal.lua  snips
nvim.old/: init.lua
nvim.old/ftplugin/: cpp.vim  html.vim  markdown.vim  rust.vim  tex.vim
nvim.old/snips/: c.snippets  cpp.snippets  norg.snippets  rst.snippets  rust.snippets  tex.snippets
nvim.old/templates/: skeleton.tex
nvim/ftplugin/: gitconfig.vim  vimwiki.vim
nvim/lsp/: mlir_lsp_server.lua  tblgen_lsp_server.lua
nvim/snippets/: all.lua  boilerplate.lua  cmake.lua  cpp.lua  lua.lua  markdown.lua  python.lua  rust.lua  sh.lua  tablegen.lua  tex.lua
nvim/templates/: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  pyproject.toml  skeleton.html  template.tex
other/: agnoster-vim.zsh-theme  gdbinit  i3config  muttrc
scripts/: clang-format.py
sh/: common.sh  darwin.sh  host_n18.sh  linux.sh  macos.sh  ogbon.bash  pacown
ssh/: config
tmux/: commands.txt  languages.txt  tmux.conf
tmuxinator/: main.yml  mo405.yml  pyth.yml  rust.yml  work.yml
vim/: coc-settings.json  plugins.vim
zsh/: zshrc
(+188 files in other folders)
